# SimpleSearchEngine

./: CMakeLists.txt  README.md  install.sh
.github/workflows/: ci_tests.yml
lib/: CMakeLists.txt
lib/argparser/: CMakeLists.txt
lib/index/: CMakeLists.txt  Index.cpp  Index.hpp  Indexer.cpp  Indexer.hpp
lib/search/: CMakeLists.txt  QueryHandler.cpp  QueryHandler.hpp  Searcher.cpp  Searcher.hpp
tests/: CMakeLists.txt  IntegrationTestSuite.cpp  IntegrationTestSuite.hpp  UnitTestSuite.cpp  UnitTestSuite.hpp  integration_tests.cpp  test_functions.cpp  test_functions.hpp  unit_tests.cpp
